Dynamically bound mesh deform modifiers fail to update viewport on object transformation of deformer #71412

Closed
opened 2019-11-07 19:26:02 +01:00 by Nathan Vasil · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-06 20:48, hash: 85637311c2
Also broken: Blender 2.80 release
Worked: Blender 2.79b release

When you transform an object, Blender fails to update objects that depend on that object for purposes of dynamically bound mesh deform modifiers. This affects only viewport display; render displays properly (probably updating everything prior to rendering anyways?)

This also appears to be true with non-dynamically bound mesh deforms, although it's unclear whether regular binds should depend on transformation space, or if the fact that they do is a (different) bug-- I just figure regular mesh deforms operating in different spaces than their targets is unsupported.

Exact steps for others to reproduce the error

See attached .blend, made in 2.80 release, which demonstrates the bug and the workaround:

MDbug.blend

Cube at origin is being mesh deformed by Icosphere in wire display over it. Move Icosphere in object mode. Cube fails to update. (Enter then exit edit mode on Icosphere to trigger Cube to update and see how your object level transformation affected the dynamic mesh deform.)

Cube.001 and Icosphere.001 demonstrate the workaround. By parenting Icosphere.001 to a bone that triggers update of Cube.001 via a meaningless armature modifier, you can manipulate Icosphere.001 through the bone for real-time updating of the effects of your transformation.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-06 20:48, hash: `85637311c2` Also broken: Blender 2.80 release Worked: Blender 2.79b release When you transform an object, Blender fails to update objects that depend on that object for purposes of dynamically bound mesh deform modifiers. This affects only viewport display; render displays properly (probably updating everything prior to rendering anyways?) This also appears to be true with non-dynamically bound mesh deforms, although it's unclear whether regular binds should depend on transformation space, or if the fact that they do is a (different) bug-- I just figure regular mesh deforms operating in different spaces than their targets is unsupported. **Exact steps for others to reproduce the error** See attached .blend, made in 2.80 release, which demonstrates the bug and the workaround: [MDbug.blend](https://archive.blender.org/developer/F7977555/MDbug.blend) Cube at origin is being mesh deformed by Icosphere in wire display over it. Move Icosphere in object mode. Cube fails to update. (Enter then exit edit mode on Icosphere to trigger Cube to update and see how your object level transformation affected the dynamic mesh deform.) Cube.001 and Icosphere.001 demonstrate the workaround. By parenting Icosphere.001 to a bone that triggers update of Cube.001 via a meaningless armature modifier, you can manipulate Icosphere.001 through the bone for real-time updating of the effects of your transformation.
Author

Added subscriber: @vasiln

Added subscriber: @vasiln
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

P1155: T71412_snippet



diff --git a/source/blender/modifiers/intern/MOD_meshdeform.c b/source/blender/modifiers/intern/MOD_meshdeform.c
index 408e38f43ab..21fdc010a1d 100644
--- a/source/blender/modifiers/intern/MOD_meshdeform.c
+++ b/source/blender/modifiers/intern/MOD_meshdeform.c
@@ -158,7 +158,7 @@ static void updateDepsgraph(ModifierData *md, const ModifierUpdateDepsgraphConte
 {
   MeshDeformModifierData *mmd = (MeshDeformModifierData *)md;
   if (mmd->object != NULL) {
-    /* TODO(sergey): Do we need transform component here? */
+    DEG_add_object_relation(ctx->node, mmd->object, DEG_OB_COMP_TRANSFORM, "Mesh Deform Modifier");
     DEG_add_object_relation(ctx->node, mmd->object, DEG_OB_COMP_GEOMETRY, "Mesh Deform Modifier");
   }
 }

would make it update [as 2.79 did]

Still not sure if this is desired behavior [will read up on Dynamic Binding for a bit...]

[P1155: T71412_snippet](https://archive.blender.org/developer/P1155.txt) ``` diff --git a/source/blender/modifiers/intern/MOD_meshdeform.c b/source/blender/modifiers/intern/MOD_meshdeform.c index 408e38f43ab..21fdc010a1d 100644 --- a/source/blender/modifiers/intern/MOD_meshdeform.c +++ b/source/blender/modifiers/intern/MOD_meshdeform.c @@ -158,7 +158,7 @@ static void updateDepsgraph(ModifierData *md, const ModifierUpdateDepsgraphConte { MeshDeformModifierData *mmd = (MeshDeformModifierData *)md; if (mmd->object != NULL) { - /* TODO(sergey): Do we need transform component here? */ + DEG_add_object_relation(ctx->node, mmd->object, DEG_OB_COMP_TRANSFORM, "Mesh Deform Modifier"); DEG_add_object_relation(ctx->node, mmd->object, DEG_OB_COMP_GEOMETRY, "Mesh Deform Modifier"); } } ``` would make it update [as 2.79 did] Still not sure if this is desired behavior [will read up on Dynamic Binding for a bit...]

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I wouldn't know why the current behaviour would be desired.

I wouldn't know why the current behaviour would be desired.
Philipp Oeser self-assigned this 2019-11-14 18:08:31 +01:00
Member

Lets confirm this then

Lets confirm this then

This issue was referenced by f1518d0f28

This issue was referenced by f1518d0f28fec4355d4c1e9a8d7dc22e9031be1c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71412
No description provided.